--- a/_layout/default.html
+++ b/_layout/default.html
@@ -2,15 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>{{%page.title}}</title>
+    <title>{{ page.title}}</title>
 </head>
 <body>
     <h1>La page par défault</h1>
+    {{ content}}
 </body>
-
 </html>
-{% include header.html %}
-<div class="content">
-    {{ content }}
-</div>
-{% include footer.html %}
