--- a/_layout/test.html
+++ b/_layout/test.html
@@ -24,6 +24,16 @@
             color: #8e8e8e;
             padding: 10px 0 0;
         }
+        .profil-pic {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+        .username {
+            font-weight: bold;
+            margin-left: 10px;
+        }
         .post-image {
             width: 100%;
         }
@@ -50,16 +60,23 @@
 </head>
 <body>
 <div class="post">
-    <div class="post-date">
-        12 janvier 2017
-    </div>
-    <div class="post-network">
-        <img src="https://img.icons8.com/?size=100&id=32309&format=png&color=000000" alt="Instagram" />
-    </div>
+    <div class="post-header">
+        <div class="profil-pic">
+            <img src="../_sources/profil1.jpg" alt="Utilisateur" />
+        <div class="username">
+            Francis
+        </div>
+        <div class="post-date">
+            12 janvier 2017
+        </div>
+        <div class="post-network">
+            <img src="https://img.icons8.com/?size=100&id=32309&format=png&color=000000" alt="Instagram" />
+        </div>
+    </div>    
     <div class="post-ressources">
-        
+        <img src="../_sources/image1.jpg" alt="Post" class="post-image"/>
     </div>
-    <img src="/_sources/image1.jpg" alt="Post" class="post-image"/>
+    
     <div class="post-actions">
         <img src="https://img.icons8.com/ios-glyphs/30/like--v1.png" alt="Like" />
         <img src="https://img.icons8.com/ios-glyphs/30/comments.png" alt="Comment" />
@@ -67,7 +84,7 @@
     </div>
     <div class="likes">123 j’aime</div>
     <div class="commentaire">
-        <span>utilisateur</span> Ceci est une légende inspirante sous un post magnifique 🌅
+        Ceci est une légende inspirante sous un post magnifique 🌅
     </div>
 </div>
 </body>
