--- a/_layout/test.html
+++ b/_layout/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -59,8 +59,9 @@
         .likes {
             display: flex;
             align-items: center;
-            gap: 5px;
-            font-weight: bold;
+            gap: 3px;
+            font-weight: lighter;
+            font-size: 0.8em;
         }
 
         .likes img {
@@ -104,13 +105,44 @@
         </div>
         <div class="share">
             <a href="https://www.instagram.com/share/url" target="_blank">
-                <img src="https://img.icons8.com/ios-glyphs/30/sent.png" alt="Share" />
+                <img src="https://img.icons8.com/?size=100&id=BRtz3xGe0ZXx&format=png&color=000000" alt="Share" />
             </a>
         </div>
     </div>
     <div class="commentaire">
         Ceci est une magnifique photo 🌅
     </div>
+</div>
+<div class="post">
+    <div class="post-header">
+        <div class="profil-pic">
+            <img src="../_sources/profillias.png" alt="Utilisateur" />
+        </div>
+        <div class="username">Lias</div>
+        <div class="post-date">7 juin 2023</div>
+        <div class="post-network">
+            <a href="https://www.linkedin.com/company/lias-lab/" target="_blank">
+                <img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="Linkedin" />
+            </a>
+        </div>
+    </div>
+    <div class="commentaire">
+        <br>
+            {Jobs} <a href="https://www.linkedin.com/company/lias-lab/">Laboratoire LIAS</a>  propose un sujet de thèse Cifre avec l'entreprise <a href="https://www.linkedin.com/company/airbus/" target="_blank">Airbus Aircraft</a> « Sérialisation en temps logique de multiples simulations avioniques temps réel »
+            <a href="https://www.linkedin.com/feed/hashtag/informatique" target="_blank">#informatique</a>
+
+        <br>
+        <br>
+            ➡️ Date limite de dépôt des candidatures : 28 avril 2025
+        <br>
+        <br>
+            ➡️ Date de prise de fonction : à partir de septembre 2025
+        <br>
+        Plus de détails sur la page Emploi
+        <a href="https://www.linkedin.com/company/lias-lab/jobs/" target="_blank">https://www.linkedin.com/company/lias-lab/jobs/</a>
+        <br>
+    </div>
+
 </div>
 </body>
 </html>
