--- a/_layout/test.html
+++ b/_layout/test.html
@@ -75,6 +75,9 @@
         .commentaire {
             padding: 10px;
         }
+        .post-ressources {
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
@@ -126,7 +129,7 @@
             </a>
         </div>
     </div>
-    <div class="commentaire">
+    <div class="post-ressources">
         <br>
             {Jobs} <a href="https://www.linkedin.com/company/lias-lab/">Laboratoire LIAS</a>  propose un sujet de thèse Cifre avec l'entreprise <a href="https://www.linkedin.com/company/airbus/" target="_blank">Airbus Aircraft</a> « Sérialisation en temps logique de multiples simulations avioniques temps réel »
             <a href="https://www.linkedin.com/feed/hashtag/informatique" target="_blank">#informatique</a>
@@ -141,6 +144,19 @@
         Plus de détails sur la page Emploi
         <a href="https://www.linkedin.com/company/lias-lab/jobs/" target="_blank">https://www.linkedin.com/company/lias-lab/jobs/</a>
         <br>
+    </div>
+    <div class="post-actions">
+        <div class="likes">
+            <a href="https://www.linkedin.com/posts/lias-lab_informatique-activity-7306220785151406080-7C2d?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFL9RB8BY9rPT2OnrMUWb2gbC0Da-lExOic" target="_blank">
+                <img src="https://img.icons8.com/?size=100&id=64767&format=png&color=000000" alt="Like" />
+            </a>
+            200
+        </div>
+        <div class="share">
+            <a href="https://www.linkedin.com/company/lias-lab/jobs/" target="_blank">
+                <img src="https://img.icons8.com/?size=100&id=BRtz3xGe0ZXx&format=png&color=000000" alt="Share" />
+            </a>
+        </div>
     </div>
 
 </div>
