--- a/_layout/test1instagram.html
+++ b/_layout/test1instagram.html
@@ -4,81 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page de contenu</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #fafafa;
-            display: flex;
-            justify-content: center;
-            padding: 50px;
-        }
-        .post {
-            width: 400px;
-            background-color: white;
-            border: 1px solid #dbdbdb;
-            border-radius: 5px;
-            position: relative;
-        }
-        .post-header {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            position: relative;
-        }
-        .profil-pic img {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            border: 2px solid white;
-            box-shadow: 0 0 5px rgba(0,0,0,0.1);
-        }
-        .username {
-            font-weight: bold;
-            margin-left: 10px;
-        }
-        .post-date {
-            font-size: 0.8em;
-            color: #8e8e8e;
-            margin-left: auto;
-        }
-        .post-network img {
-            width: 20px;
-            height: 20px;
-            margin-left: 10px;
-        }
-        .post-image {
-            width: 100%;
-        }
-        .post-actions {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px;
-        }
-
-        .likes {
-            display: flex;
-            align-items: center;
-            gap: 3px;
-            font-weight: lighter;
-            font-size: 0.8em;
-        }
-
-        .likes img {
-            width: 20px;
-        }
-
-        .share img {
-            width: 20px;
-            cursor: pointer;
-        }
-        .commentaire {
-            padding: 10px;
-        }
-        .post-ressources {
-            padding: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="../_styles/style1.css">
 </head>
 <body>
 <div class="post">
