--- a/_layout/test2.html
+++ b/_layout/test2.html
@@ -4,21 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test 2 Feed réseaux sociaux</title>
-    <style>
-      body{
-        background-color: #E7EAFF;
-        font-family: "Open Sans", sans-serif;
-        font-size: 13pt;
-        font-weight: 400;
-        line-height: 1.65;
-      }
-      .post {
-        height: auto;
-        width: 400px;
-
-      }
-
-    </style>
+    <link rel="stylesheet" href="../_styles/style2.css">
 </head>
 <body>
 
