--- a/_layout/test1.html
+++ b/_layout/test1.html
@@ -38,7 +38,7 @@
       </a>
     </div>
   </div>
-  <div class="commentaire">
+  <div class="description">
     Ceci est une magnifique photo 🌅
   </div>
 </div>
