--- a/_layout/test2.html
+++ b/_layout/test2.html
@@ -52,7 +52,7 @@
         <br>
     </div>
     <div class="post-ressources">
-        <img src="_sources/imagelias.jpg" alt="Post" class="post-image"/>
+        <img src="../_sources/imagelias.jpg" alt="Post" class="post-image"/>
     </div>
 </div>
 </body>
