--- a/_styles/style2.css
+++ b/_styles/style2.css
@@ -33,4 +33,13 @@ body{
     margin-left: 10px;
 }
 
-.p
+.post-date {
+    font-size: 0.8em;
+    color: #8e8e8e;
+    margin-right: 10px;
+}
+.post-network img {
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+}
