--- a/_layout/test1.html
+++ b/_layout/test1.html
@@ -12,8 +12,10 @@
     <div class="profil-pic">
       <img src="../_sources/profil1.jpg" alt="Utilisateur" />
     </div>
-    <div class="username">Francis</div>
-    <div class="post-date">12 janvier 2017</div>
+    <div class="post-info">
+      <div class="username">Francis</div>
+      <div class="post-date">12 janvier 2017</div>
+    </div>
     <div class="post-network">
       <a href="https://www.instagram.com/ciaokombucha/" target="_blank">
         <img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" alt="Instagram" />
