--- a/_layout/test1linkedin.html
+++ b/_layout/test1linkedin.html
@@ -12,8 +12,10 @@
         <div class="profil-pic">
             <img src="../_sources/profillias.png" alt="Utilisateur" />
         </div>
-        <div class="username">Lias</div>
-        <div class="post-date">7 juin 2023</div>
+        <div class="post-info">
+            <div class="username">Lias</div>
+            <div class="post-date">7 juin 2023</div>
+        </div>
         <div class="post-network">
             <a href="https://www.linkedin.com/company/lias-lab/" target="_blank">
                 <img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="Linkedin" />
