--- a/_layout/test2.html
+++ b/_layout/test2.html
@@ -65,5 +65,37 @@
         <img src="../_sources/imagelias.jpg" alt="Post" class="post-image"/>
     </div>
 </div>
+    <div class="post">
+        <div class="post-header">
+            <div class="profil-pic">
+                <img src="../_sources/profillias.png" alt="Utilisateur" />
+            </div>
+            <div class="post-info">
+                <div class="username">Lias</div>
+                <div class="post-date">7 juin 2023</div>
+            </div>
+            <div class="post-network">
+                <a href="https://www.linkedin.com/company/lias-lab/" target="_blank">
+                    <img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="Linkedin" />
+                </a>
+            </div>
+        </div>
+        <div class="post-ressources">
+            <br>
+            {Jobs} <a href="https://www.linkedin.com/company/lias-lab/">Laboratoire LIAS</a>  propose un sujet de thèse Cifre avec l'entreprise <a href="https://www.linkedin.com/company/airbus/" target="_blank">Airbus Aircraft</a> « Sérialisation en temps logique de multiples simulations avioniques temps réel »
+            <a href="https://www.linkedin.com/feed/hashtag/informatique" target="_blank">#informatique</a>
+
+            <br>
+            <br>
+            ➡️ Date limite de dépôt des candidatures : 28 avril 2025
+            <br>
+            <br>
+            ➡️ Date de prise de fonction : à partir de septembre 2025
+            <br>
+            Plus de détails sur la page Emploi
+            <a href="https://www.linkedin.com/company/lias-lab/jobs/" target="_blank">https://www.linkedin.com/company/lias-lab/jobs/</a>
+            <br>
+        </div>
+    </div>
 </body>
 </html>
