--- a/_styles/style2.css
+++ b/_styles/style2.css
@@ -13,6 +13,7 @@ body{
     border-radius: 10px;
     position: relative;
     padding: 5px;
+    margin-bottom: 15px;
 }
 .post:hover {
     border: 1px solid #F56A6A;
