--- a/_styles/style2.css
+++ b/_styles/style2.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #E7EAFF;
+    background-color: #f4f4f4;
     font-family: "Open Sans", sans-serif;
     font-size: 10pt;
     font-weight: 400;
