--- a/_layout/test3.html
+++ b/_layout/test3.html
@@ -11,14 +11,16 @@
   <div class="post-ressources">
     <img src="../_sources/imagelias.jpg" alt="Post" class="post-image"/>
   </div>
-  <div class="post-network">
-      <a href="https://www.instagram.com/lias_laboratory/" target="_blank">
-        <img src="https://img.icons8.com/?size=100&id=DpOQ6G5p47f0&format=png&color=000000" alt="Instagram" />
-      </a>
+
+  <div class="post-header">
+    <div class="post-network">
+        <a href="https://www.instagram.com/lias_laboratory/" target="_blank">
+          <img src="https://img.icons8.com/?size=100&id=DpOQ6G5p47f0&format=png&color=000000" alt="Instagram" />
+        </a>
+    </div>
+    <div class="username">lias_laboratory</div>
   </div>
-  <div class="username">
-    lias_laboratory
-  </div>
+
   <div class="description">
     <br>
     {Soutenance Thèse} Nour KARNIB <a href="https://www.instagram.com/lias_laboratory/" target="_blank">@lias_laboratory</a> soutiendra sa thèse de doctorat Informatique <a href="https://www.instagram.com/explore/search/keyword/?q=%23ensma">#ensma</a> dont le titre est "Application of Optimization in Regional Distribution Network Reconfiguration" le 10/02/2025 à 13h30 en A102 <a href="https://www.instagram.com/explore/search/keyword/?q=%23ensma">#ensma</a>
@@ -30,6 +32,7 @@
     ➡️ <a href="https://www.lias-lab.fr/seminars/" target="_blank">https://www.lias-lab.fr/seminars/</a>
     <br>
   </div>
+
   <div class="post-footer">
     <div class="post-date">
       10/02/2025
@@ -40,32 +43,38 @@
           <img src="https://img.icons8.com/?size=100&id=87729&format=png&color=000000" alt="Share" />
         </a>
       </div>
-
     </div>
   </div>
 </div>
 <div class="post">
-  <div class="post-network">
-    <a href="https://www.linkedin.com/company/lias-lab/" target="_blank">
-      <img src="https://img.icons8.com/?size=100&id=8808&format=png&color=000000" alt="Linkedin" />
-    </a>
+
+  <div class="post-header">
+    <div class="post-network">
+      <a href="https://www.linkedin.com/company/lias-lab/" target="_blank">
+        <img src="https://img.icons8.com/?size=100&id=8808&format=png&color=000000" alt="Linkedin" />
+      </a>
+    </div>
+    <div class="username">LIAS Laboratory</div>
   </div>
-  <div class="username">LIAS Laboratory</div>
+
   <div class="post-ressources">
-    <br>
-    {Jobs} <a href="https://www.linkedin.com/company/lias-lab/">Laboratoire LIAS</a>  propose un sujet de thèse Cifre avec l'entreprise <a href="https://www.linkedin.com/company/airbus/" target="_blank">Airbus Aircraft</a> « Sérialisation en temps logique de multiples simulations avioniques temps réel »
-    <a href="https://www.linkedin.com/feed/hashtag/informatique" target="_blank">#informatique</a>
-    <br>
-    <br>
-    ➡️ Date limite de dépôt des candidatures : 28 avril 2025
-    <br>
-    <br>
-    ➡️ Date de prise de fonction : à partir de septembre 2025
-    <br>
-    Plus de détails sur la page Emploi
-    <a href="https://www.linkedin.com/company/lias-lab/jobs/" target="_blank">https://www.linkedin.com/company/lias-lab/jobs/</a>
-    <br>
+    <div class="text">
+      <br>
+      {Jobs} <a href="https://www.linkedin.com/company/lias-lab/">Laboratoire LIAS</a>  propose un sujet de thèse Cifre avec l'entreprise <a href="https://www.linkedin.com/company/airbus/" target="_blank">Airbus Aircraft</a> « Sérialisation en temps logique de multiples simulations avioniques temps réel »
+      <a href="https://www.linkedin.com/feed/hashtag/informatique" target="_blank">#informatique</a>
+      <br>
+      <br>
+      ➡️ Date limite de dépôt des candidatures : 28 avril 2025
+      <br>
+      <br>
+      ➡️ Date de prise de fonction : à partir de septembre 2025
+      <br>
+      Plus de détails sur la page Emploi
+      <a href="https://www.linkedin.com/company/lias-lab/jobs/" target="_blank">https://www.linkedin.com/company/lias-lab/jobs/</a>
+      <br>
+    </div>
   </div>
+
   <div class="post-footer">
     <div class="post-date">
       10/02/2025
@@ -78,6 +87,7 @@
       </div>
     </div>
   </div>
+
 </div>
 </body>
 </html>
